--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -7,7 +7,7 @@
 	 background-size: cover;
 	 background-repeat: repeat;
 }
- .container {
+ .containers {
 	 width: 375px;
 	 height: 750px;
    margin: 5px ;
