--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -12,7 +12,9 @@
     color:darkcyan;
 }
 .navbar{
+    height: 8rem;
     width: 100vw;
+    margin-left: 20px;
     border:1px solid black;
     background-color: rgb(58, 56, 56);
 }
@@ -26,17 +28,22 @@
 .nav-item{
    height:100%;
    width: 8vw;
-   font-size: 30px;
+   font-size: 1.7rem;
    display: flex;
    justify-content: center;
-    border-left: 1px solid black;
+   color:white
+    /* border-left: 1px solid black; */
     
+}
+.nav-item :hover{
+     background-color: black;
+     color: white
 }
 .nav-input{
     width:60vw;
     height:30px;
     background-color: black;
-    font-size: 20px;
+    font-size: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
